--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CvwoAssignment</title>
-    <%= csrf_meta_tags %>
+    <title>Todo List</title>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
