--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,6 @@
  *
  *= require_tree .
  *= require_self
+ *= require semantic-ui-css/semantic.min.css
+ *= require react-datepicker/dist/react-datepicker.css
  */
